Bug 254894 On Windows, creating an event queue (e.g. via XMLHttpRequest) dismisses open menus r=dean_tessman rs=darin a=bsmedberg